@@ -308,6 +308,7 @@ RefineSchedule {
 PersistentOverlapConnectors {
    DEV_check_created_connectors = FALSE
    DEV_check_accessed_connectors = FALSE
+   implicit_connector_creation_rule = "ERROR"
 }
 
 ////////////////////////////////////////////////////////////////////////
